[workspace]
resolver = "2"
members = ["shared", "server", "client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Single source of third-party dep versions, consumed by the `hyd_crates`
# crate_universe hub in //:MODULE.bazel. First-party deps (hyd_shared,
# //lrb/config) are linked via Bazel BUILD files, NOT declared here — crate
# universe splices this workspace into a temp dir where out-of-workspace path
# deps don't resolve.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
log = "0.4"
env_logger = "0.11"
leptos = { version = "0.8", features = ["csr"] }
gloo-net = "0.6"
gloo-timers = "0.3"
# Must match the wasm-bindgen-cli bundled by rules_rust_wasm_bindgen.
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
