[package]
name = "nlb"
version = "0.1.0"
authors = ["Ryan Draves <dravesr@umich.edu>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# TODO: Understand rust packaging
path = "lib.rs"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "=0.2.92"
wee_alloc = { version = "0.4.5", optional = true }
spin = "0.9.8"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }


[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
