[package]
name = "brm_client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "brm_client"
path = "src/main.rs"

[dependencies]
brm_shared.workspace = true
serde.workspace = true
bincode.workspace = true
macroquad.workspace = true
log.workspace = true

# Native-only: the wasm client uses its own WebSocket plugin (web/brm_net.js).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quad-net.workspace = true
