[package]
name = "brm_server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "brm_server"
path = "src/main.rs"

[dependencies]
brm_shared.workspace = true
serde.workspace = true
bincode.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
futures-util.workspace = true
log.workspace = true
env_logger.workspace = true
