[package]
name = "hyd_server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "hyd_server"
path = "src/main.rs"

# First-party deps (hyd_shared, //lrb/config) are linked via Bazel (see BUILD);
# crate_universe splicing cannot resolve out-of-workspace path deps.
[dependencies]
axum.workspace = true
deadpool-postgres.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tower-http.workspace = true
