[package]
name = "iir_client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# First-party dep iir_shared is linked via Bazel (see BUILD); crate_universe
# splicing cannot resolve out-of-workspace path deps.
[dependencies]
console_error_panic_hook.workspace = true
gloo-net.workspace = true
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
