[package]
name = "iir_server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "iir_server"
path = "src/main.rs"

# First-party deps (iir_shared, //lrb/config) are linked via Bazel (see BUILD);
# crate_universe splicing cannot resolve out-of-workspace path deps.
[dependencies]
axum.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
